NativePlugins/OmniPcmShared/include/omni_pcm_shared.h

#define OMNI_PCM_UUID_BYTES 64
typedef struct OmniPcmInfo {
    int32_t sample_rate;
    int32_t channels;
    int32_t bytes_per_frame;
    int32_t buffer_frames;
    int64_t total_frames_hint;
    int64_t decoded_total_frames;
    int64_t effective_total_frames;
} OmniPcmInfo;
typedef struct OmniPcmSnapshot {
    uint32_t version;
    int32_t sample_rate;
    int32_t channels;
    int32_t bytes_per_frame;
    int32_t buffer_frames;
    int32_t legacy_play_state;
    uint32_t flags;
    int64_t write_cursor;
    int64_t read_cursor;
    int64_t stream_id;
    int32_t state;
    int32_t error_code;
    int64_t total_frames_hint;
    int64_t decoded_total_frames;
    int64_t final_write_cursor;
    int64_t audible_cursor;
    int64_t seek_frame;
    int64_t seek_generation;
    int64_t last_update_tick;
    int32_t format_generation;
    char current_uuid[OMNI_PCM_UUID_BYTES];
} OmniPcmSnapshot;
typedef void* OmniPcmHandle;
typedef void* OmniPcmClientHandle;
typedef struct OmniPcmClientConfig {
    const char* host;          /* default: 127.0.0.1 */
    int32_t port;             /* 0 = discover omnimix_port.txt */
    int32_t timeout_ms;       /* default: 3000 */
} OmniPcmClientConfig;
typedef struct OmniPcmConnectOptions {
    const char* client_id;
    const char* mod_id;
    const char* game_name;
    const char* display_name;
    int32_t kind;
    uint32_t capability_flags;
    int32_t no_instance;
    int32_t max_imported_playlists;  /* 0 = unspecified / no limit */
    int32_t max_tags;
    int32_t max_playlist_entries;
} OmniPcmConnectOptions;
typedef struct OmniPcmConnectionInfo {
    char instance_id[128];
    int32_t is_new;
    int32_t no_instance;
} OmniPcmConnectionInfo;
typedef struct OmniPcmPlaybackStatusInfo {
    char track_uuid[OMNI_PCM_UUID_BYTES];
    char title[256];
    char artist[256];
    char album_id[128];
    float duration;
    float position;
    int32_t is_playing;
    int32_t shuffle;
    int32_t repeat_mode;
    float volume;
} OmniPcmPlaybackStatusInfo;
typedef struct OmniPcmInstanceSummaryInfo {
    char instance_id[128];
    char display_name[256];
    char mod_id[128];
    char game_name[256];
    char current_track_uuid[OMNI_PCM_UUID_BYTES];
    int32_t kind;
    int32_t is_online;
    int32_t queue_count;
    int32_t mode;
    int64_t connected_at;
} OmniPcmInstanceSummaryInfo;
typedef struct OmniPcmInstanceProfileInfo {
    char instance_id[128];
    char display_name[256];
    char mod_id[128];
    char game_name[256];
    int32_t kind;
    uint32_t capability_flags;
    float volume;
    float target_latency;
    int32_t mode;
    int32_t max_imported_playlists;
    int32_t max_tags;
    int32_t max_playlist_entries;
    int64_t created_at;
    int64_t updated_at;
} OmniPcmInstanceProfileInfo;
typedef struct OmniPcmQueueTrackInfo {
    int32_t index;
    char uuid[OMNI_PCM_UUID_BYTES];
    char title[256];
    char artist[256];
    char album_id[128];
    char module_id[128];
    char cover_uri[512];
    float duration;
} OmniPcmQueueTrackInfo;
typedef struct OmniPcmPlaylistSourceInfo {
    char id[128];
    char name[256];
    char ref_id[256];
    int32_t song_count;
    int32_t kind;
} OmniPcmPlaylistSourceInfo;
typedef struct OmniPcmPlaylistSourceSpec {
    const char* id;
    const char* name;
    const char* ref_id;
    int32_t kind;
    const char* const* uuids;
    int32_t uuid_count;
} OmniPcmPlaylistSourceSpec;
typedef struct OmniPcmEqualizerPointInfo {
    char id[64];
    float frequency;
    float gain_db;
    float q;
    int32_t type;
} OmniPcmEqualizerPointInfo;
typedef struct OmniPcmEqualizerStateInfo {
    int32_t enabled;
    float global_gain_db;
    int32_t soft_clip_enabled;
} OmniPcmEqualizerStateInfo;
typedef struct OmniPcmBackendInfo {
    char status[32];
    char version[64];
    char name[128];
    int64_t timestamp;
} OmniPcmBackendInfo;
#define OMNI_PCM_TRACK_TITLE_SZ 256
#define OMNI_PCM_TRACK_ARTIST_SZ 256
#define OMNI_PCM_ALBUM_TITLE_SZ 256
#define OMNI_PCM_TAG_NAME_SZ 128
#define OMNI_PCM_PLAYLIST_NAME_SZ 256
#define OMNI_PCM_RESOURCE_URI_SZ 512
#define OMNI_PCM_COLOR_SZ 32
typedef struct OmniPcmTrackInfo {
    char uuid[OMNI_PCM_UUID_BYTES];
    char title[OMNI_PCM_TRACK_TITLE_SZ];
    char artist[OMNI_PCM_TRACK_ARTIST_SZ];
    char album_id[128];
    char module_id[128];
    char cover_uri[OMNI_PCM_RESOURCE_URI_SZ];
    int32_t track_number;
    float duration;
    int32_t is_excluded;
    int64_t created_at;
    int64_t last_played_at;
} OmniPcmTrackInfo;
typedef struct OmniPcmAlbumInfo {
    char id[128];
    char title[OMNI_PCM_ALBUM_TITLE_SZ];
    char artist[OMNI_PCM_TRACK_ARTIST_SZ];
    char module_id[128];
    char cover_uri[OMNI_PCM_RESOURCE_URI_SZ];
    int32_t track_count;
} OmniPcmAlbumInfo;
typedef struct OmniPcmTagInfo {
    char id[128];
    char name[OMNI_PCM_TAG_NAME_SZ];
    char module_id[128];
    char color[OMNI_PCM_COLOR_SZ];
} OmniPcmTagInfo;
typedef struct OmniPcmPlaylistInfo {
    char id[128];
    char name[OMNI_PCM_PLAYLIST_NAME_SZ];
    char module_id[128];
    char cover_uri[OMNI_PCM_RESOURCE_URI_SZ];
    int32_t track_count;
} OmniPcmPlaylistInfo;
typedef struct OmniPcmTrackQuery {
    const char* album_id;
    const char* tag_id;
    const char* playlist_id;
    const char* module_id;
    int32_t is_excluded;    /* -1=no filter, 0=only not excluded, 1=only excluded */
    int32_t limit;
    int32_t offset;
} OmniPcmTrackQuery;
typedef struct OmniPcmLibraryQuery {
    const char* module_id;
    int32_t limit;
    int32_t offset;
} OmniPcmLibraryQuery;
typedef struct OmniPcmEventInfo {
    char type[64];
    int64_t timestamp;
    char instance_id[128];
    char track_uuid[OMNI_PCM_UUID_BYTES];
    char title[256];
    char artist[256];
    char album_id[128];
    char module_id[128];
    char source_ref_id[256];
    char change_type[64];
    char display_name[256];
    float duration;
    float position;
    int32_t state;
    int32_t queue_length;
    int32_t backend_running;
    int32_t bool_value;
    int32_t song_count;
    int32_t instance_count;
    float volume;
    float latency;
} OmniPcmEventInfo;
typedef void (*OmniPcmEventCallback)(const OmniPcmEventInfo* event_info, void* user_data);