OmniMixPlayer/gui_flutter/lib/services/omni_sdk_bindings.dart

// SPDX-License-Identifier: MIT
// Native dart:ffi bindings for OmniPcmShared.dll.

import 'dart:ffi';
import 'dart:io';

import 'package:ffi/ffi.dart' show Utf8;

final DynamicLibrary omniDll = () {
  if (Platform.isWindows) {
    return DynamicLibrary.open('OmniPcmShared.dll');
  }
  throw UnsupportedError('OmniPcmShared SDK only supports Windows');
}();

const omniPcmOk = 0;
const omniPcmNotReady = -2;
const OMNI_PCM_UUID_BYTES = 64;
const OMNI_PCM_TRACK_TITLE_SZ = 256;
const OMNI_PCM_TRACK_ARTIST_SZ = 256;
const OMNI_PCM_ALBUM_TITLE_SZ = 256;
const OMNI_PCM_TAG_NAME_SZ = 128;
const OMNI_PCM_PLAYLIST_NAME_SZ = 256;
const OMNI_PCM_RESOURCE_URI_SZ = 512;
const OMNI_PCM_COLOR_SZ = 32;

const omniPcmInstanceKindGameMod = 1;
const omniPcmInstanceKindGui = 2;

const omniPcmCapServerControlledPlayback = 1 << 0;
const omniPcmCapQueueManagement = 1 << 2;
const omniPcmCapPlaylistManagement = 1 << 3;
const omniPcmCapShuffle = 1 << 4;
const omniPcmCapRepeat = 1 << 5;
const omniPcmCapSeek = 1 << 6;
const omniPcmCapVolumeControl = 1 << 7;
const omniPcmCapEqualizer = 1 << 8;
const omniPcmCapMultiplePlaylists = 1 << 9;
const omniPcmCapTagFiltering = 1 << 10;
const omniPcmCapUnlimitedTags = 1 << 11;
const omniPcmCapAlbumFiltering = 1 << 12;
const omniPcmCapAudioPlayback = 1 << 13;
const omniPcmCapCustomSystemMediaService = 1 << 14;

final class OmniPcmInfo extends Struct {
  @Int32()
  external int sampleRate;
  @Int32()
  external int channels;
  @Int32()
  external int bytesPerFrame;
  @Int32()
  external int bufferFrames;
  @Int64()
  external int totalFramesHint;
  @Int64()
  external int decodedTotalFrames;
  @Int64()
  external int effectiveTotalFrames;
}

final class OmniPcmSnapshot extends Struct {
  @Uint32()
  external int version;
  @Int32()
  external int sampleRate;
  @Int32()
  external int channels;
  @Int32()
  external int bytesPerFrame;
  @Int32()
  external int bufferFrames;
  @Int32()
  external int legacyPlayState;
  @Uint32()
  external int flags;
  @Int64()
  external int writeCursor;
  @Int64()
  external int readCursor;
  @Int64()
  external int streamId;
  @Int32()
  external int state;
  @Int32()
  external int errorCode;
  @Int64()
  external int totalFramesHint;
  @Int64()
  external int decodedTotalFrames;
  @Int64()
  external int finalWriteCursor;
  @Int64()
  external int audibleCursor;
  @Int64()
  external int seekFrame;
  @Int64()
  external int seekGeneration;
  @Int64()
  external int lastUpdateTick;
  @Int32()
  external int formatGeneration;
  @Array(OMNI_PCM_UUID_BYTES)
  external Array<Uint8> currentUuid;
}

final class OmniPcmClientConfig extends Struct {
  external Pointer<Utf8> host;
  @Int32()
  external int port;
  @Int32()
  external int timeoutMs;
}

final class OmniPcmConnectOptions extends Struct {
  external Pointer<Utf8> clientId;
  external Pointer<Utf8> modId;
  external Pointer<Utf8> gameName;
  external Pointer<Utf8> displayName;
  @Int32()
  external int kind;
  @Uint32()
  external int capabilityFlags;
  @Int32()
  external int noInstance;
  @Int32()
  external int maxImportedPlaylists;
  @Int32()
  external int maxTags;
  @Int32()
  external int maxPlaylistEntries;
}

final class OmniPcmConnectionInfo extends Struct {
  @Array(128)
  external Array<Uint8> instanceId;
  @Int32()
  external int isNew;
  @Int32()
  external int noInstance;
}

final class OmniPcmPlaybackStatusInfo extends Struct {
  @Array(OMNI_PCM_UUID_BYTES)
  external Array<Uint8> trackUuid;
  @Array(256)
  external Array<Uint8> title;
  @Array(256)
  external Array<Uint8> artist;
  @Array(128)
  external Array<Uint8> albumId;
  @Float()
  external double duration;
  @Float()
  external double position;
  @Int32()
  external int isPlaying;
  @Int32()
  external int shuffle;
  @Int32()
  external int repeatMode;
  @Float()
  external double volume;
}

final class OmniPcmInstanceSummaryInfo extends Struct {
  @Array(128)
  external Array<Uint8> instanceId;
  @Array(256)
  external Array<Uint8> displayName;
  @Array(128)
  external Array<Uint8> modId;
  @Array(256)
  external Array<Uint8> gameName;
  @Array(OMNI_PCM_UUID_BYTES)
  external Array<Uint8> currentTrackUuid;
  @Int32()
  external int kind;
  @Int32()
  external int isOnline;
  @Int32()
  external int queueCount;
  @Int32()
  external int mode;
  @Int64()
  external int connectedAt;
}

final class OmniPcmInstanceProfileInfo extends Struct {
  @Array(128)
  external Array<Uint8> instanceId;
  @Array(256)
  external Array<Uint8> displayName;
  @Array(128)
  external Array<Uint8> modId;
  @Array(256)
  external Array<Uint8> gameName;
  @Int32()
  external int kind;
  @Uint32()
  external int capabilityFlags;
  @Float()
  external double volume;
  @Float()
  external double targetLatency;
  @Int32()
  external int mode;
  @Int32()
  external int maxImportedPlaylists;
  @Int32()
  external int maxTags;
  @Int32()
  external int maxPlaylistEntries;
  @Int64()
  external int createdAt;
  @Int64()
  external int updatedAt;
}

final class OmniPcmQueueTrackInfo extends Struct {
  @Int32()
  external int index;
  @Array(OMNI_PCM_UUID_BYTES)
  external Array<Uint8> uuid;
  @Array(256)
  external Array<Uint8> title;
  @Array(256)
  external Array<Uint8> artist;
  @Array(128)
  external Array<Uint8> albumId;
  @Array(128)
  external Array<Uint8> moduleId;
  @Array(512)
  external Array<Uint8> coverUri;
  @Float()
  external double duration;
}

final class OmniPcmPlaylistSourceInfo extends Struct {
  @Array(128)
  external Array<Uint8> id;
  @Array(256)
  external Array<Uint8> name;
  @Array(256)
  external Array<Uint8> refId;
  @Int32()
  external int songCount;
  @Int32()
  external int kind;
}

final class OmniPcmPlaylistSourceSpec extends Struct {
  external Pointer<Utf8> id;
  external Pointer<Utf8> name;
  external Pointer<Utf8> refId;
  @Int32()
  external int kind;
  external Pointer<Pointer<Utf8>> uuids;
  @Int32()
  external int uuidCount;
}

final class OmniPcmEqualizerPointInfo extends Struct {
  @Array(64)
  external Array<Uint8> id;
  @Float()
  external double frequency;
  @Float()
  external double gainDb;
  @Float()
  external double q;
  @Int32()
  external int type;
}

final class OmniPcmEqualizerStateInfo extends Struct {
  @Int32()
  external int enabled;
  @Float()
  external double globalGainDb;
  @Int32()
  external int softClipEnabled;
}

final class OmniPcmBackendInfo extends Struct {
  @Array(32)
  external Array<Uint8> status;
  @Array(64)
  external Array<Uint8> version;
  @Array(128)
  external Array<Uint8> name;
  @Int64()
  external int timestamp;
}

final class OmniPcmEventInfo extends Struct {
  @Array(64)
  external Array<Uint8> type;
  @Int64()
  external int timestamp;
  @Array(128)
  external Array<Uint8> instanceId;
  @Array(OMNI_PCM_UUID_BYTES)
  external Array<Uint8> trackUuid;
  @Array(256)
  external Array<Uint8> title;
  @Array(256)
  external Array<Uint8> artist;
  @Array(128)
  external Array<Uint8> albumId;
  @Array(128)
  external Array<Uint8> moduleId;
  @Array(256)
  external Array<Uint8> sourceRefId;
  @Array(64)
  external Array<Uint8> changeType;
  @Array(256)
  external Array<Uint8> displayName;
  @Float()
  external double duration;
  @Float()
  external double position;
  @Int32()
  external int state;
  @Int32()
  external int queueLength;
  @Int32()
  external int backendRunning;
  @Int32()
  external int boolValue;
  @Int32()
  external int songCount;
  @Int32()
  external int instanceCount;
}

final class OmniPcmTrackInfo extends Struct {
  @Array(OMNI_PCM_UUID_BYTES)
  external Array<Uint8> uuid;
  @Array(OMNI_PCM_TRACK_TITLE_SZ)
  external Array<Uint8> title;
  @Array(OMNI_PCM_TRACK_ARTIST_SZ)
  external Array<Uint8> artist;
  @Array(128)
  external Array<Uint8> albumId;
  @Array(128)
  external Array<Uint8> moduleId;
  @Array(OMNI_PCM_RESOURCE_URI_SZ)
  external Array<Uint8> coverUri;
  @Int32()
  external int trackNumber;
  @Float()
  external double duration;
  @Int32()
  external int isExcluded;
  @Int64()
  external int createdAt;
  @Int64()
  external int lastPlayedAt;
}

final class OmniPcmAlbumInfo extends Struct {
  @Array(128)
  external Array<Uint8> id;
  @Array(OMNI_PCM_ALBUM_TITLE_SZ)
  external Array<Uint8> title;
  @Array(OMNI_PCM_TRACK_ARTIST_SZ)
  external Array<Uint8> artist;
  @Array(128)
  external Array<Uint8> moduleId;
  @Array(OMNI_PCM_RESOURCE_URI_SZ)
  external Array<Uint8> coverUri;
  @Int32()
  external int trackCount;
}

final class OmniPcmTagInfo extends Struct {
  @Array(128)
  external Array<Uint8> id;
  @Array(OMNI_PCM_TAG_NAME_SZ)
  external Array<Uint8> name;
  @Array(128)
  external Array<Uint8> moduleId;
  @Array(OMNI_PCM_COLOR_SZ)
  external Array<Uint8> color;
}

final class OmniPcmPlaylistInfo extends Struct {
  @Array(128)
  external Array<Uint8> id;
  @Array(OMNI_PCM_PLAYLIST_NAME_SZ)
  external Array<Uint8> name;
  @Array(128)
  external Array<Uint8> moduleId;
  @Array(OMNI_PCM_RESOURCE_URI_SZ)
  external Array<Uint8> coverUri;
  @Int32()
  external int trackCount;
}

final class OmniPcmTrackQuery extends Struct {
  external Pointer<Utf8> albumId;
  external Pointer<Utf8> tagId;
  external Pointer<Utf8> playlistId;
  external Pointer<Utf8> moduleId;
  @Int32()
  external int isExcluded;
  @Int32()
  external int limit;
  @Int32()
  external int offset;
}

final class OmniPcmLibraryQuery extends Struct {
  external Pointer<Utf8> moduleId;
  @Int32()
  external int limit;
  @Int32()
  external int offset;
}

final class OmniPcmClientHandle extends Opaque {}

final class OmniPcmHandle extends Opaque {}

typedef ClientHandle = Pointer<OmniPcmClientHandle>;
typedef PcmHandle = Pointer<OmniPcmHandle>;
typedef OmniPcmEventCallback =
    Pointer<
      NativeFunction<Void Function(Pointer<OmniPcmEventInfo>, Pointer<Void>)>
    >;

typedef _CreateClientNative =
    Pointer<OmniPcmClientHandle> Function(Pointer<OmniPcmClientConfig>);
typedef _CreateClientDart = ClientHandle Function(Pointer<OmniPcmClientConfig>);
typedef _DestroyClientNative = Void Function(Pointer<OmniPcmClientHandle>);
typedef _DestroyClientDart = void Function(ClientHandle);
typedef _GetErrorNative = Pointer<Utf8> Function(Pointer<OmniPcmClientHandle>);
typedef _GetErrorDart = Pointer<Utf8> Function(ClientHandle);
typedef _GetPortNative = Int32 Function(Pointer<OmniPcmClientHandle>);
typedef _GetPortDart = int Function(ClientHandle);
